--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ body{
   display: flex;
   justify-content: center;
   left: 50%;
+  min-width:1000px;
   transform: translateX(-50%);
   box-shadow: inset 0 -60px 0 -30px #5918DF;
 }
